k8s/120-audio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audio
  namespace: default
spec:
  selector:
    app: audio
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
