k8s/120-audio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audio
  namespace: default
spec:
  parentRefs:
    - name: main-gateway
      namespace: default
  hostnames:
    - "audio.ehpc.io"
  rules:
    - backendRefs:
        - name: audio
          port: 80
